updated base url , created form to books adding in books.html .

--- a/frontend/books.html
+++ b/frontend/books.html
@@ -17,6 +17,8 @@
     </div>
 </body>
 <script>
+        let BaseUrl = "https://gregarious-dolomite-explanation.glitch.me/"
+
     if(userType="admin"){
         alert("logged as admin")
         if(localStorage.getItem("loginData")!==""){
