--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
 </div>
 </body>
 <script>
+    let BaseUrl = "https://gregarious-dolomite-explanation.glitch.me/";
     let form = document.getElementById("form");
     form.addEventListener("submit",(e)=>{
         event.preventDefault();
