--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -10,6 +10,7 @@
     <div id="nav"></div>
     <div id="formDiv">
       <form id="form">
+        <h3>Books Entry </h3>
         <input id="Title" placeholder="enter title" type="text" value="" />
         <input id="author" placeholder="enter author" type="text" value="" />
         <select id="selected">
@@ -17,7 +18,7 @@
           <option>techincal</option>
           <option>comedy</option>
         </select>
-        <input type="submit" value="save" />
+        <input type="submit" value="save" id="save"/>
       </form>
     </div>
     <div id="Booksshelf"></div>
@@ -40,9 +41,9 @@
               const bookCard = books.map( books =>{
                 return `<div id="bookCard">
                 <img src ="${books.imageUrl}">
-                <h3>${books.title}</h3>
-                <h4>${books.author}</h4>
-                <h4>${books.category}</h4>
+                <h3>Title:${books.title}</h3>
+                <h4>Author:${books.author}</h4>
+                <h4>Categoty:${books.category}</h4>
             </div>`;
 
               }).join(' ');
@@ -78,6 +79,7 @@
               .then(() => {
                 alert("Book Added Successfully. ");
                 form.reset();
+                window.reload()
               })
               .catch((err) => {
                 console.log(err);
