--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/DomBookApp/styles/index.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/DomBookApp/styles/index.css" />
     <title>Document</title>
-</head>
-<body>
-<div id="formDiv">
-    <form id="form">
+  </head>
+  <body>
+    <div id="formDiv">
+      <form id="form">
         <h3>Login</h3>
-        <input type="email" placeholder="enter email" id="useremail" value="">
-        <input type="password" placeholder=" enter password" id="userpassword" value="">
-        <input type="submit" placeholder="" id="loginBtn" value="login">
-
-    </form>
-</div>
-</body>
-<script>
+        <input type="email" placeholder="enter email" id="useremail" value="" />
+        <input
+          type="password"
+          placeholder=" enter password"
+          id="userpassword"
+          value=""
+        />
+        <input type="submit" placeholder="" id="loginBtn" value="login" />
+      </form>
+    </div>
+  </body>
+  <script>
     let BaseUrl = "https://gregarious-dolomite-explanation.glitch.me/";
     let form = document.getElementById("form");
-    form.addEventListener("submit",(e)=>{
-        event.preventDefault();
-     let email = document.getElementById("useremail").value;
-     let password = document.getElementById("userpassword").value;
-     fetch("https://gregarious-dolomite-explanation.glitch.me/BookUsers")
-     .then((res)=>res.json)
-     .then((data)=>{
-        
-        // let userEmail = data.find((el,i)=>el.email ==email)
-        // console.log(userEmail)
-        if(data !==" "){
-
-        alert("users availabale")
-        window.location = "admin.html"
-        }
-        else{
-            alert("un availabale")
-
-        }
-     })
-     .catch((err)=>{
-        console.log(err)
-     })
-   
-    })
-</script>
-
+    form.addEventListener("submit", (e) => {
+      event.preventDefault();
+      let email = document.getElementById("useremail").value;
+      let password = document.getElementById("userpassword").value;
+      fetch("https://gregarious-dolomite-explanation.glitch.me/BookUsers")
+        .then((res) => res.json())
+        .then((data) => {
+          // let Data = JSON.parse(data)
+          // console.log(Data)
+          // let userEmail = data.find((el,i)=>el.email ==email)
+          // console.log(userEmail)
+          if (data !== " ") {
+            window.location = "admin.html";
+          } else {
+            window.location = "books.html";
+          }
+        })
+        .catch((err) => {
+          console.log(err);
+        });
+    });
+  </script>
 </html>
